--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -60,4 +60,11 @@
 			border: 2px solid $white;
 		}
 	}
+
+	&.logout {
+		width: 50px;
+		height: 50px;
+		padding: 0px;
+		border-radius: 5px;
+	}
 }
