--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@700&family=Roboto:wght@300;400;500;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@700&family=Montserrat:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;700;900&display=swap');
 @import '@/styles/variables.scss';
 * {
 	box-sizing: border-box;
@@ -19,11 +18,12 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-	background-color: $white-smoke;
+	background-color: $white;
 	box-shadow: inset 0 0 2.5px 2 rgba(0, 0, 0, 0.5);
-	border: 2px solid;
-	border-image: linear-gradient(to bottom, $secondary-light, $secondary-dark) 1
-		1 1 1 stretch;
+	/* border: 2px $red solid; */
+	border-radius: 15px;
+	/* border-image: linear-gradient(to bottom, $secondary-light, $secondary-dark) 1
+		1 1 1 stretch; */
 }
 
 ::-webkit-scrollbar-thumb {
@@ -31,11 +31,11 @@ body {
 
 	border-radius: 5px;
 }
-
+/* 
 ::-webkit-scrollbar-thumb:hover {
 	background-color: $secondary-light;
 }
 
 ::-webkit-scrollbar-thumb:active {
 	background-color: $dark;
-}
+} */
