--- a/src/components/ui/footer/Footer.module.scss
+++ b/src/components/ui/footer/Footer.module.scss
@@ -7,8 +7,12 @@
 	width: 100%;
 	height: 200px;
 	padding: 20px;
-	background: rgba($white, 0.9);
+	background: $white;
 	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 800;
+	font-size: 16px;
+	color: $dark-gray;
 
 	&__partners {
 		position: relative;
@@ -16,23 +20,73 @@
 		align-items: center;
 		justify-content: center;
 		width: 100%;
+		height: 50%;
 
 		&::after {
 			content: '';
 			position: absolute;
 			top: 100%;
-			left: 20%;
-			width: 60%;
+			left: 5%;
+			width: 90%;
 			height: 1px;
 			background-color: $primary;
 			transform: translateY(-50%);
+		}
+
+		&Text {
+			margin-right: 30px;
+		}
+
+		&Logo {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			.footer__promLogo {
+				margin-right: 30px;
+				transition: filter 0.3s ease-in-out;
+				filter: grayscale(1);
+
+				&:hover {
+					filter: grayscale(0);
+					cursor: pointer;
+				}
+			}
+
+			.footer__diiaLogo {
+				margin-right: 30px;
+				transition: filter 0.3s ease-in-out;
+				filter: contrast(0.5);
+
+				&:hover {
+					filter: contrast(1);
+					cursor: pointer;
+				}
+			}
 		}
 	}
 
 	&__copyrights {
 		display: flex;
 		align-items: center;
-		justify-content: center;
-		width: 100%;
+		justify-content: space-between;
+		width: 90%;
+		height: 50%;
+
+		&Links {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			.footer__link {
+				margin-right: 20px;
+				text-decoration: none;
+				color: $dark-gray;
+
+				&:hover {
+					color: $primary;
+				}
+			}
+		}
 	}
 }
