--- a/src/components/ui/input/Input.module.scss
+++ b/src/components/ui/input/Input.module.scss
@@ -2,63 +2,92 @@
 .input {
 	position: relative;
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
+	flex-direction: column;
 	width: 100%;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 
-	&__search {
-		width: calc(100% - 50px);
-		height: 50px;
-		margin: 8px 0;
-		padding: 0px 15px;
-		background: transparent;
-		border: 2px solid $dark;
-		border-radius: 5px 0px 0px 5px;
-		outline: 2px solid $white;
-		color: $white;
-
-		&::placeholder {
-			color: white;
-		}
-
-		&:focus {
-			border-color: $white;
-		}
-
-		&.error {
-			border-color: $red;
+	&__label {
+		&Text {
+			font-family: 'Montserrat', sans-serif;
+			color: $dark-gray;
+			margin-bottom: 20px;
 		}
 	}
 
-	&__field {
+	.input__container {
+		display: flex;
+		align-items: center;
 		width: 100%;
-		height: 50px;
-		margin-bottom: 15px;
-		padding: 0px 15px;
-		background: transparent;
-		border: 2px solid $dark;
-		border-radius: 5px;
-		outline: none;
-		transition: all 0.2s ease-in-out;
 
-		&:hover {
-			box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
-				0 10px 10px rgba(0, 0, 0, 0.22);
-			scale: 1.01;
+		.input__search {
+			width: calc(100% - 50px);
+			height: 50px;
+			margin: 8px 0;
+			padding: 0px 15px;
+			background: transparent;
+			border: 2px solid $dark;
+			border-radius: 5px 0px 0px 5px;
+			outline: 2px solid $white;
+			color: $white;
+
+			&::placeholder {
+				color: white;
+			}
+
+			&:focus {
+				border-color: $white;
+			}
+
+			&.error {
+				border-color: $red;
+			}
 		}
+		.input__field {
+			width: 100%;
+			height: 50px;
+			margin-bottom: 10px;
+			padding: 0px 15px;
+			background: $white;
+			border: 2px solid $dark;
+			border-radius: 5px;
+			outline: none;
+			transition: all 0.2s ease-in-out;
+			font-family: 'Montserrat', sans-serif;
+			color: $dark-gray;
+			font-weight: 700;
+			font-size: 16px;
 
-		&:focus {
-			border-color: $orange;
-		}
+			&::-webkit-inner-spin-button,
+			::-webkit-outer-spin-button {
+				-webkit-appearance: none;
+				margin: 0;
+			}
 
-		&.error {
-			border-color: $red;
+			&::placeholder {
+				color: $gray;
+				font-weight: 600;
+				font-size: 14px;
+			}
+			&:hover {
+				box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+					0 10px 10px rgba(0, 0, 0, 0.22);
+				scale: 1.01;
+			}
+
+			&:focus {
+				border-color: $orange;
+			}
+
+			&.error {
+				border-color: $red;
+			}
 		}
 	}
 
 	&__error {
-		position: absolute;
-		top: 55px;
+		/* position: absolute;
+		top: 55px; */
 		color: $red;
 	}
 }
