--- a/src/components/ui/loader/Loader.module.scss
+++ b/src/components/ui/loader/Loader.module.scss
@@ -1,16 +1,51 @@
+@import '@/styles/variables.scss';
 .loader {
-	width: 50px;
-	height: 50px;
-	border-radius: 50%;
-	border: 3px dashed teal;
-	animation: rotate 1s infinite linear;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	padding: 50px;
+	&__item {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100px;
+		height: 100px;
+		border-radius: 50%;
+		border: 5px dashed $primary;
+		animation: rotate 3s infinite linear;
+	}
+	&__image {
+		width: 90px;
+		height: 90px;
+		border-radius: 50%;
+		/* border: 5px dashed $primary; */
+		/* transform: rotate(50deg); */
+		animation: rotateLeft 3s infinite linear;
+	}
 }
 
 @keyframes rotate {
 	from {
 		transform: rotate(0deg) scale(1);
 	}
+	50% {
+		transform: rotate(180deg) scale(1);
+	}
 	to {
-		transform: rotate(360deg) scale(1.4);
+		transform: rotate(360deg) scale(1);
+	}
+}
+
+@keyframes rotateLeft {
+	from {
+		transform: rotate(0deg) scale(1);
+	}
+	50% {
+		transform: rotate(-180deg) scale(1);
+	}
+	to {
+		transform: rotate(-360deg) scale(1);
 	}
 }
