--- a/src/components/ui/navbar/Navbar.module.scss
+++ b/src/components/ui/navbar/Navbar.module.scss
@@ -8,13 +8,21 @@
 	height: 100px;
 	background: rgba($black, 0.5);
 	transition: transform 0.3s ease-in-out;
-
+	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 800;
+	font-size: 16px;
 	&_hidden {
 		transform: translateY(-100%);
 	}
 
 	&_visible {
 		transform: translateY(0);
+	}
+
+	&__favoriteIcon {
+		width: 25px;
+		height: 25px;
 	}
 
 	&__ukrPromo {
@@ -88,16 +96,19 @@
 					border-radius: 50%;
 				}
 			}
-			.navbar__logout {
+			.navbar__auth {
 				display: flex;
-				align-items: center;
-				&Icon {
-					width: 35px;
-					height: 35px;
-					stroke: $white;
-					stroke-width: 1px;
-					&:hover {
-						stroke: $primary;
+				.navbar__logout {
+					display: flex;
+					align-items: center;
+					&Icon {
+						width: 35px;
+						height: 35px;
+						stroke: $white;
+						stroke-width: 1px;
+						&:hover {
+							stroke: $primary;
+						}
 					}
 				}
 			}
