--- a/src/components/ui/postFilter/PostFilter.module.scss
+++ b/src/components/ui/postFilter/PostFilter.module.scss
@@ -4,7 +4,6 @@
 	top: 50%;
 	left: 50%;
 	width: 80%;
-	height: 250px;
 	padding: 20px;
 	background: linear-gradient(
 		to right,
@@ -17,8 +16,23 @@
 
 	&__crumbs {
 		display: flex;
-		align-items: center;
-		justify-content: center;
+		align-items: flex-start;
+		justify-content: space-around;
 		flex-wrap: wrap;
+		&Heading {
+			margin: 0px 0px 5px 0px;
+		}
+		&Price {
+			color: $white;
+
+			&Inputs {
+				display: flex;
+				.price {
+					margin-right: 2px;
+					width: 100px;
+					color: $red;
+				}
+			}
+		}
 	}
 }
