--- a/src/components/ui/postCard/PostCard.module.scss
+++ b/src/components/ui/postCard/PostCard.module.scss
@@ -21,12 +21,38 @@
 		margin: 5px;
 		font-size: 16px;
 		font-weight: bold;
+		color: $dark-gray;
+		text-align: left;
+		&Description {
+			margin: 5px;
+			font-size: 16px;
+			font-weight: bold;
+			color: $dark-gray;
+			text-align: left;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			max-width: 100%;
+			display: inline-block;
+		}
 	}
 
 	&__textHeaders {
 		margin: 5px;
+		font-size: 16px;
+		font-weight: bold;
+		font-family: 'Monttserat', sans-serif;
+		color: $primary;
+		text-align: left;
+	}
+
+	&__textMainHeaders {
+		margin: 5px;
 		font-size: 20px;
-		color: $dark-gray;
+		font-weight: bold;
+		font-family: 'Monttserat', sans-serif;
+		color: $primary;
+		text-align: left;
 	}
 
 	&__container {
@@ -48,7 +74,7 @@
 		overflow: hidden;
 
 		&Image {
-			object-fit: fill;
+			object-fit: cover;
 			width: 100%;
 			height: 100%;
 		}
@@ -61,6 +87,9 @@
 
 		.postCard__description {
 			position: relative;
+			display: flex;
+			justify-content: space-around;
+			flex-direction: column;
 			width: 60%;
 			padding: 10px;
 
@@ -85,6 +114,12 @@
 			width: 20%;
 			padding: 10px;
 
+			.postCard__utilitiesContainer {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				flex-direction: column;
+			}
 			&::after {
 				content: '';
 				position: absolute;
@@ -99,36 +134,69 @@
 
 		.postCard__total {
 			width: 20%;
-
-			.postCard__favorite {
+			&Buttons {
 				display: flex;
-				align-items: center;
 				justify-content: right;
 				width: 100%;
-				height: 20%;
-				padding: 0 25px;
+				padding: 10px;
 
-				&Icon {
-					z-index: 11;
-					width: 25px;
-					height: 25px;
-					stroke: $black;
-					stroke-width: 1px;
-					stroke-linecap: round;
-					fill: transparent;
-					cursor: pointer;
-					transition: all 0.1s ease;
+				.postCard__edit {
+					display: flex;
+					align-items: center;
+					justify-content: right;
+					width: 100%;
+					height: 20%;
 
-					&:hover {
-						width: 30px;
-						height: 30px;
-						fill: $red;
-						filter: drop-shadow(0px 0px 5px rgba($black, 0.7));
-					}
-
-					&:active {
+					&Icon {
+						z-index: 11;
 						width: 25px;
 						height: 25px;
+						stroke: $black;
+						stroke-width: 1px;
+						stroke-linecap: round;
+						fill: transparent;
+						cursor: pointer;
+						transition: all 0.1s ease;
+
+						&:hover {
+							scale: (1.2);
+							fill: $primary;
+							filter: drop-shadow(0px 0px 5px rgba($black, 0.7));
+						}
+
+						&:active {
+							scale: (1);
+						}
+					}
+				}
+				.postCard__bin {
+					z-index: 12;
+					display: flex;
+					align-items: center;
+					justify-content: right;
+					width: 100%;
+					height: 20%;
+
+					&Icon {
+						z-index: 11;
+						width: 25px;
+						height: 25px;
+						stroke: $black;
+						stroke-width: 1px;
+						stroke-linecap: round;
+						fill: transparent;
+						cursor: pointer;
+						transition: all 0.1s ease;
+
+						&:hover {
+							scale: (1.2);
+							fill: $red;
+							filter: drop-shadow(0px 0px 5px rgba($black, 0.7));
+						}
+
+						&:active {
+							scale: (1);
+						}
 					}
 				}
 			}
