--- a/src/components/ui/form/Form.module.scss
+++ b/src/components/ui/form/Form.module.scss
@@ -5,11 +5,14 @@
 	align-items: center;
 	justify-content: space-between;
 	height: 100%;
-	padding: 50px;
+	padding: 30px;
 	background: $white;
 	text-align: center;
-
+	color: $primary;
 	&__content {
 		width: 100%;
+		.form__error {
+			color: $red;
+		}
 	}
 }
