--- a/src/components/screens/home/Home.module.scss
+++ b/src/components/screens/home/Home.module.scss
@@ -3,13 +3,34 @@
 	width: 100%;
 	&__main {
 		position: relative;
-		height: 90vh;
+		height: 80vh;
 
 		&Image {
 			width: 100vw;
-			height: 90vh;
+			height: 80vh;
+			object-fit: cover;
 			box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
 				0 10px 10px rgba(0, 0, 0, 0.22);
+		}
+	}
+
+	&__contentContainer {
+		display: flex;
+		flex-direction: column;
+		width: calc(100% - 40px);
+		margin: 20px;
+		border-radius: 20px;
+		text-align: center;
+		box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+
+		.home__content {
+			display: flex;
+			justify-content: space-between;
+			width: 100%;
+			padding: 20px 0px;
+			&Dropdown {
+				margin: 20px 60px;
+			}
 		}
 	}
 }
