--- a/src/components/screens/post/Post.module.scss
+++ b/src/components/screens/post/Post.module.scss
@@ -1,9 +1,23 @@
 @import '@/styles/variables.scss';
 .post {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	position: relative;
 	width: 100%;
 	height: 100%;
+	font-size: 18px;
+	font-weight: bold;
+	color: $dark-gray;
 
+	&__textHeaders {
+		margin-bottom: 20px;
+		color: $primary;
+	}
+	&__text {
+		margin: 10px 0;
+	}
 	&__main {
 		position: relative;
 		height: 100px;
@@ -14,7 +28,7 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
-		width: 70%;
+		width: 90%;
 		height: 100%;
 		padding: 20px;
 
@@ -25,58 +39,25 @@
 
 			&Path {
 				margin: 0 20px;
+
+				.post__Link {
+					color: $primary;
+					&:hover {
+						color: $orange;
+					}
+				}
 			}
 		}
 
 		.post__item {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			width: 100%;
-			height: 500px;
 			margin: 20px 0;
-			padding: 20px;
-			border-radius: 20px;
+			position: relative;
+			width: 70%;
+			height: 100%;
+			overflow: hidden;
+			border-radius: 15px;
 			box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
 				0 10px 10px rgba(0, 0, 0, 0.22);
-
-			&__text {
-				margin: 5px;
-				font-size: 16px;
-				font-weight: bold;
-			}
-
-			&__textHeaders {
-				margin: 5px;
-				font-size: 20px;
-				color: $dark-gray;
-			}
-
-			&__item {
-				display: flex;
-				align-items: center;
-				width: 100%;
-				height: 100%;
-				overflow: hidden;
-			}
-
-			.post__gallery {
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				width: 60%;
-				height: 600px;
-				overflow: hidden;
-				border: 2px solid $primary;
-				border-radius: 9px;
-
-				&Image {
-					width: 100%;
-					height: 100%;
-					object-fit: fill;
-				}
-			}
 		}
 
 		.post__mainInformation {
@@ -85,7 +66,7 @@
 			flex-direction: column;
 			width: 100%;
 			height: 100%;
-			padding: 20px;
+			padding: 40px;
 			border-radius: 20px;
 			box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
 				0 10px 10px rgba(0, 0, 0, 0.22);
@@ -97,97 +78,99 @@
 			width: 100%;
 			height: 100%;
 			margin: 20px 0;
-			padding: 20px;
+			padding: 40px;
 			border-radius: 20px;
 			box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
 				0 10px 10px rgba(0, 0, 0, 0.22);
+
+			.post__descriptionField {
+				display: flex;
+				align-items: center;
+				justify-content: left;
+				border-bottom: 1px solid $primary;
+				padding: 10px;
+				&Icon {
+					width: 30px;
+					height: 30px;
+					margin-right: 10px;
+				}
+			}
 		}
 
-		.post__priceList {
+		.post__description {
 			position: relative;
 			display: flex;
 			flex-direction: column;
-			align-items: center;
-			justify-content: center;
 			width: 100%;
-			padding: 10px;
+			min-height: 200px;
+			padding: 40px;
 			border-radius: 20px;
 			box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
 				0 10px 10px rgba(0, 0, 0, 0.22);
 		}
 
 		.post__total {
+			display: flex;
+			flex-direction: column;
 			width: 100%;
+			height: 100%;
 			margin: 20px 0;
+			padding: 40px;
 			border-radius: 20px;
 			box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
 				0 10px 10px rgba(0, 0, 0, 0.22);
 
-			.post__favorite {
+			.post__descriptionField {
 				display: flex;
 				align-items: center;
-				justify-content: right;
-				width: 100%;
-				height: 20%;
-				padding: 0 25px;
-
+				justify-content: left;
+				border-bottom: 1px solid $primary;
+				padding: 10px;
 				&Icon {
-					z-index: 11;
-					width: 25px;
-					height: 25px;
-					stroke: $black;
-					stroke-width: 1px;
-					stroke-linecap: round;
-					fill: transparent;
-					cursor: pointer;
-					transition: all 0.1s ease;
-
-					&:hover {
-						width: 30px;
-						height: 30px;
-						fill: $red;
-						filter: drop-shadow(0px 0px 5px rgba($black, 0.7));
-					}
-
-					&:active {
-						width: 25px;
-						height: 25px;
-					}
+					width: 30px;
+					height: 30px;
+					margin-right: 10px;
 				}
-			}
-
-			&Price {
-				display: flex;
-				flex-direction: column;
-				align-items: center;
-				justify-content: center;
-				height: 80%;
 			}
 		}
 
-		&__overlay {
-			z-index: 10;
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100px;
-			height: 100px;
-			background: $black;
-			border-radius: 50%;
-			outline: 20px solid transparent;
-			opacity: 0;
-			transform-origin: center;
-
-			&_animation {
-				opacity: 0.4;
-				animation: ripple 2s ease;
+		.post__authorInfo {
+			display: flex;
+			flex-direction: column;
+			width: 100%;
+			height: 100%;
+			padding: 40px;
+			border-radius: 20px;
+			box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+				0 10px 10px rgba(0, 0, 0, 0.22);
+			&Container {
+				display: flex;
+				align-items: center;
+				justify-content: left;
+				.post__authorMainInfo {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					flex-direction: column;
+				}
+				.post__authorPhoto {
+					width: 150px;
+					height: 150px;
+					margin-right: 20px;
+					border: 2px solid $primary;
+					border-radius: 50%;
+				}
 			}
 		}
 	}
 }
 
-@keyframes ripple {
-	to {
-		transform: scale(100);
-	}
+.photoSlider {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	margin-bottom: 100px;
+	overflow: hidden;
+	border-radius: 15px;
+	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
