--- a/src/components/screens/profile/Profile.module.scss
+++ b/src/components/screens/profile/Profile.module.scss
@@ -3,42 +3,71 @@
 	position: relative;
 	&__navbar {
 		position: relative;
-		height: 100px;
+		min-height: 100px;
+		height: 100%;
 	}
 	&__main {
 		display: flex;
-
+		justify-content: center;
 		width: calc(100% - 40px);
+		height: 100%;
 		margin: 20px;
 		border-radius: 20px;
 		text-align: center;
-
 		box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-		&Image {
-			margin: 20px;
-			border: 2px solid $primary;
 
-			border-radius: 50%;
+		.profile__edit {
+			width: 25%;
+			justify-content: center;
+
+			&Icon {
+				width: 25px;
+				height: 25px;
+			}
 		}
+		&ImageContainer {
+			width: 25%;
+			.profile__mainImage {
+				margin: 20px;
+				border: 2px solid $primary;
+				width: 200px;
+				height: 200px;
+				object-fit: cover;
+				border-radius: 50%;
+			}
+		}
+
 		&Info {
 			display: flex;
-			flex-direction: column;
 			align-items: center;
 			justify-content: center;
-			width: 200px;
-			height: 200px;
+			flex-direction: column;
+			width: 50%;
 			margin: 20px;
+			font-family: 'Montserrat', sans-serif;
+			font-weight: 800;
+			font-size: 18px;
+			color: $primary;
+			&Container {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				flex-direction: column;
+				width: 500px;
+				.profile__name {
+					font-size: 28px;
+					margin-bottom: 20px;
+				}
 
-			.profile__name {
-				margin-bottom: 20px;
-			}
+				.profile__email {
+					color: $dark-gray;
+					margin-bottom: 20px;
+				}
 
-			.profile__email {
-				margin-bottom: 20px;
-			}
-
-			.profile__phone {
-				margin-bottom: 20px;
+				.profile__phone {
+					color: $dark-gray;
+					margin-bottom: 20px;
+				}
 			}
 		}
 	}
@@ -51,5 +80,26 @@
 		border-radius: 20px;
 		text-align: center;
 		box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+
+		.profile__heading {
+			margin: 20px;
+			color: $primary;
+		}
 	}
+
+	&__modalHeading {
+		margin-bottom: 20px;
+		font-family: 'Monttserat', sans-serif;
+		color: $primary;
+	}
+	&__modalButtons {
+		display: flex;
+		justify-content: space-between;
+		width: 250px;
+	}
+}
+.fileInput {
+	visibility: hidden;
+	position: absolute;
+	left: -9999px;
 }
